<resources>
    <string name="app_name">MovieDB</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_about">About</string>
    <string name="title_genre">Genre</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_most_popular">Most Popular</string>
    <string name="title_up_coming">Up Coming</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_rating">"Rating: "</string>
    <string name="title_release_date">"Release date: "</string>
    <string name="title_more_trailer">More Trailer</string>
    <string name="title_cast">Cast</string>
    <string name="title_trailer_offical">Trailer offical</string>
    <string name="title_birthday">"Birthday: "</string>
    <string name="title_popularity">"Popularity: "</string>
</resources>
