<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="moviedb.cleanarchitecture.com.framgia.moviedb.screen.home.HomeViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:id="@+id/text_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_genre"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_genre" />

        <TextView
            android:id="@+id/text_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_now_playing"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_genre" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_now_playing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_now_playing" />

        <TextView
            android:id="@+id/text_most_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_most_popular"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_now_playing" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_most_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_most_popular" />

        <TextView
            android:id="@+id/text_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_top_rated"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_most_popular" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_top_rated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_top_rated" />

        <TextView
            android:id="@+id/text_up_coming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_up_coming"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_top_rated" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_up_coming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_up_coming" />

    </android.support.constraint.ConstraintLayout>
</layout>
